--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
 <body>
 
     <audio id="fart-sound">
-        <source src="https://www.soundjay.com/human/sounds/fart-01.mp3" type="audio/mpeg">
+        <source src="/fart.mp3" type="audio/mpeg">
     </audio>
 
     <div class="phone-container">
         
         <div id="screen-morning" class="screen">
-            <h1>☀️Sbah lkhiir☀️<br>3arfek 3ad fay9a</h1>
+            <h1>☀️Sbah lkhiir☀️<br>3arfek yallah fay9a</h1>
             <p>Sawbt lik wahd l3yba🫣</p>
-            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHIwdW9qamYyOHh6eXFidHh1bmZ6Y2R6eXN6eXN6eXN6eXN6eXN6JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/6uMqzcbWRhoT6/giphy.gif">
+            <img src="https://tenor.com/bQwlw.gif">
             <br>
             <button class="btn" onclick="goToAsk()">Yllh nchufo ga3❤️</button>
         </div>
@@ -170,7 +170,7 @@
         <div id="screen-ask" class="screen hidden">
             <h1>Wanna be my good girl (my Valentine)? 😊🌹</h1>
             <p>(3arfek atgolih ah wlk jerrbi dik no😁)</p>
-            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExbnZueWJ0amR6eXFidHh1bmZ6Y2R6eXN6eXN6eXN6eXN6eXN6JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/vO8F4fYQd39h6/giphy.gif" style="width: 180px;">
+            <img src="https://tenor.com/fEqoNTosDMA.gif" style="width: 180px;">
             <br>
             <button class="btn" onclick="sayYes()">Yes daddyyy👉👈🥺</button>
             <button class="btn" id="no-btn" onclick="playFart()">👹NO👹</button>
@@ -216,7 +216,7 @@
             document.getElementById('screen-content').classList.remove('hidden');
 
             if (type === 'bouquet') {
-                display.innerHTML = `<h2>Lwirdat kijiw meak zwiwniiin</h2><p>(Faracha wst lwroooood)</p><img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHR5amZ6eXFidHh1bmZ6Y2R6eXN6eXN6eXN6eXN6eXN6JmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/Z9S8S9S8S9S8S/giphy.gif">`;
+                display.innerHTML = `<h2>Lwirdat kijiw meak zwiwniiin</h2><p>(Faracha wst lwroooood)</p><img src="flowers.jpeg" style="width:100%">`;
             } else if (type === 'letter') {
                 display.innerHTML = `
                     <div class="letter-container">
