--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div id="screen-morning" class="screen">
             <h1>☀️Sbah lkhiir☀️<br>3arfek yallah fay9a</h1>
             <p>Sawbt lik wahd l3yba🫣</p>
-            <img src="https://tenor.com/bQwlw.gif">
+            <img src="sleepybaby.gif" style="width:100%">
             <br>
             <button class="btn" onclick="goToAsk()">Yllh nchufo ga3❤️</button>
         </div>
@@ -170,7 +170,7 @@
         <div id="screen-ask" class="screen hidden">
             <h1>Wanna be my good girl (my Valentine)? 😊🌹</h1>
             <p>(3arfek atgolih ah wlk jerrbi dik no😁)</p>
-            <img src="https://tenor.com/fEqoNTosDMA.gif" style="width: 180px;">
+            <img src="susdog.gif" style="width:100%">
             <br>
             <button class="btn" onclick="sayYes()">Yes daddyyy👉👈🥺</button>
             <button class="btn" id="no-btn" onclick="playFart()">👹NO👹</button>
